--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://lubinetsab.github.io/quartz/"
+baseURL = "https://jakhontoviy.github.io/quartz/"
 languageCode = "en-us"
 relativeURLs = false
 disablePathToLower = true
