--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = "https://jakhontoviy.github.io/quartz/"
-languageCode = "en-us"
+languageCode = "ru-ru"
 relativeURLs = false
 disablePathToLower = true
 ignoreFiles = [
