--- a/data/config.yaml
+++ b/data/config.yaml
@@ -21,7 +21,7 @@ description:
   Современный программный продукт, нацеленный на радикальное сокращение времени интерпретации 
   скважинных данных и существенное повышение качества таких работ
 page_title:
-  "🪴 Платформа Гамма" 
+  "🗂️ Платформа Гамма: Руководство пользователя" 
 links:
   - link_name: Webpage
     link: https://gamma-wellbore.com
